code cleanup and adding pgadmin